# Universal-AI-Knowledge-Graph

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  ECOSYSTEM.md  PRIVACY_AND_DATA_PROTECTION.md  ROADMAP.md  UI_PLACEHOLDERS.md
examples/: demo_records.json
src/universal_kg/: __init__.py  cli.py  config.py  domain.py  logging.py  security.py
src/universal_kg/api/: main.py
src/universal_kg/connectors/: base.py  json_connector.py  pdf_connector.py
src/universal_kg/processing/: chunking.py  embeddings.py  extraction.py
src/universal_kg/services/: ingestion.py  search.py
src/universal_kg/storage/: memory.py
tests/: test_api.py  test_ingestion_search.py
