[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-ai-knowledge-graph"
version = "0.1.0"
description = "Enterprise semantic knowledge graph for AI-searchable business knowledge."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "Apache-2.0"}
authors = [{name = "Raeburn AI"}]
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "pydantic==2.10.4",
  "pydantic-settings==2.7.0",
  "sqlalchemy==2.0.36",
  "psycopg[binary]==3.2.3",
  "pgvector==0.3.6",
  "alembic==1.14.0",
  "httpx==0.28.1",
  "python-multipart==0.0.20",
  "structlog==24.4.0",
  "tenacity==9.0.0",
  "orjson==3.10.12",
  "networkx==3.4.2",
  "pypdf==5.1.0",
  "beautifulsoup4==4.12.3",
  "lxml==6.1.1",
  "typer==0.15.1"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.25.0",
  "pytest-cov==6.0.0",
  "ruff==0.8.4",
  "mypy==1.14.0",
  "types-beautifulsoup4==4.12.0.20241020",
  "coverage==7.6.9"
]
openai = ["openai==1.58.1"]

[project.scripts]
universal-kg = "universal_kg.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["universal_kg"]

[tool.pytest.ini_options]
addopts = "-q --cov=universal_kg --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/universal_kg"]
branch = true

[tool.coverage.report]
fail_under = 70
show_missing = true
